# task-manager

./: LICENSE  README.md
my-todo/: Cargo.toml
my-todo/client/: a-at1st.sh  b-post.sh  c-add.sh  d-add-empty.sh
my-todo/examples/: a-at1st.rs  b-post.rs
my-todo/src/: errors.rs  lib.rs
my-todo/src/app/: handler.rs  repository.rs
my-todo/src/domain/: repository.rs
my-todo/todo-front/: package.json
my-todo/todo-front/src/: App.tsx
todo-front/: package.json
todo-front/src/: App.tsx
todo-front/src/components/: TodoForm.tsx  TodoItem.tsx  TodoList.tsx
todo-front/src/lib/api/: todo.ts
todo-front/src/styles/: modal.ts
